deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ipam
  name: phpipam
spec:
  replicas: 1
  selector:
    matchLabels:
      name: phpipam
  template:
    metadata:
      labels:
        name: phpipam
    spec:
      containers:
      - name: phpipam
        image: pierrecdn/phpipam:1.4
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
          - name: http-port
            containerPort: 80
      - name: phpipam-mariadb
        image: mariadb:10.5.10
        resources:
          limits:
            memory: 1.5Gi
            cpu: 500m
        volumeMounts:
          - name: ipam-mariadb-pvc
            mountPath: /var/lib/mysql
    volumes:
    - name: ipam-mariadb-pvc
      persistentVolumeClaim:
        claimName: ipam-mariadb-pvc
